--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon Backend/server.js",
     "start": "node Backend/server.js",
-    "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
+    "build": "npm install --unsafe-perm && npm install --prefix Frontend --unsafe-perm && npm run build --prefix Frontend"
+
   },
   "keywords": [],
   "author": "",
