--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prebuild": "chmod +x node_modules/.bin/vite",
     "dev": "vite",
-    "build": "npx --yes vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
