--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon Backend/server.js",
     "start": "node Backend/server.js",
-    "build": "npm install --unsafe-perm && npm install --prefix Frontend --unsafe-perm && npm run build --prefix Frontend"
+    "build": "npm install && cd Frontend && npm install && npm run build"
 
   },
   "keywords": [],
