--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon Backend/server.js",
     "start": "node Backend/server.js",
-    "build": "npm install && cd Frontend && npm install && npm run build"
+    "build": "npm install && cd Frontend && npm install && npx vite build"
+
   },
   "keywords": [],
   "author": "",
