--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "Backend/server.js",
   "scripts": {
-    "dev": "nodemon Backend/server.js",
-    "start": "node Backend/server.js",
-    "build": "npm install && cd Frontend && npm install && npx vite build"
+  "dev": "nodemon Backend/server.js",
+  "start": "node Backend/server.js",
+  "build": "npm install && npm install --prefix Frontend && vite build --cwd Frontend"
+},
 
-  },
   "keywords": [],
   "author": "",
   "type": "module",
