--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "frontend",
+  "name": "Frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint ."
   },
