--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "Backend/server.js",
   "type": "module",
-  "scripts": {
-    "dev": "nodemon Backend/server.js",
-    "start": "node Backend/server.js",
-    "build": "npm install && cd Frontend && npm install && npx vite build"
-  },
+ "scripts": {
+  "dev": "nodemon Backend/server.js",
+  "start": "node Backend/server.js",
+  "build": "npm install && cd Frontend && npm install && npm run build"
+}
+
   "dependencies": {
     "@stripe/stripe-js": "^8.0.0",
     "axios": "^1.12.2",
