--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
  "scripts": {
   "dev": "nodemon Backend/server.js",
   "start": "node Backend/server.js",
-  "build": "npm install && cd Frontend && npm install && npm run build"
+  "build": "cd Frontend && npm install && npm run build"
 },
   "dependencies": {
     "@stripe/stripe-js": "^8.0.0",
