--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "Frontend",
+  "name": "frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "npx vite build",
-  "preview": "npx vite preview",
-  "lint": "eslint ."
-},
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint ."
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
