--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,11 +4,12 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint ."
-  },
+  "dev": "vite",
+  "build": "npx --no-install vite build",
+  "preview": "npx --no-install vite preview",
+  "lint": "eslint ."
+},
+
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
