--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"cors": "^2.8.5",
 		"lucide-react": "^0.435.0",
 		"react-confetti": "^6.1.0",
 		"react-hot-toast": "^2.4.1",
